<resources>
    <string name="app_name">导航导览平台</string>
    <string name="guide_name">导览图片详情</string>
    <string name="photo_name">图片导览</string>
    <string name="action_settings">Settings</string>
    <string name="access_Token">pk.eyJ1IjoibWFwZXIiLCJhIjoiY2l3dm9qdzRiMDAxMTJ6cGY2ZHlzOTRvNCJ9.WcJV0GCgk_4XXHa8cnmi_Q</string>
    <string name="title_activity_login">登录</string>

    <!-- Strings related to login -->
    <string name="prompt_userId">用户名</string>
    <string name="prompt_email">邮箱</string>
    <string name="prompt_phone">手机号</string>
    <string name="prompt_password">密码</string>
    <string name="prompt_confirm_password">确认密码</string>
    <string name="action_sign_in">登录</string>
    <string name="action_logout">退出登录</string>
    <string name="action_sign_on">注册</string>
    <string name="action_sign_in_short">登录</string>
    <string name="error_invalid_email">邮箱地址无效</string>
    <string name="error_invalid_password">密码太短</string>
    <string name="error_incorrect_password">密码错误</string>
    <string name="error_field_required">该项是必输项</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_register">registerActivity</string>
    <string name="prompt_userId_email_phone">用户名/手机号/邮箱</string>
    <string name="error_user_required">用户名或密码不能为空</string>
</resources>
